[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Enemies/GuyBad/BadGuyThiccTorso.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/GuyBad/HandOL.png" type="Texture" id=2]
[ext_resource path="res://Charecters/BaseSpriteBounce.tscn" type="PackedScene" id=3]
[ext_resource path="res://Charecters/BadGuy.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enemies/GuyBad/BadGuyEye.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/GuyBad/HeadOL.png" type="Texture" id=6]
[ext_resource path="res://Assets/GuyGood/Shadow.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/GuyBad/health/BarUnder.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/GuyBad/health/BarOver.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemies/GuyBad/health/BarProgress.png" type="Texture" id=10]
[ext_resource path="res://Assets/SFX/Sneeze2.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/Cough cough.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/Cough.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Enemies/GuyBad/HandWhite.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/GuyBad/BadGuyThiccTorsoWhite.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemies/GuyBad/HeadWhite.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemies/GuyBad/EyeWhite.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "Celebrate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso/LeftArm:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7.22618, -13.8122 ), Vector2( -7.31216, -15.4888 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso/RightArm:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7.15919, -11.8702 ), Vector2( 7.63206, -13.6328 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fists"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4.259, 0.21 ), Vector2( 19.135, 0.21 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 29.94, -3.108 ), Vector2( -5.63559, -3.10798 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.63559, -3.10798 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/RightArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.74056, 0.209625 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Torso/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.74056, 0.209625 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Torso/LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.63559, -3.10798 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 10 )

[sub_resource type="CircleShape2D" id=6]
radius = 75.0

[sub_resource type="Animation" id=7]
resource_name = "Heal"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 0, 1 ), Color( 0, 0.960784, 0, 1 ), Color( 0, 1, 1, 1 ), Color( 0, 0, 1, 1 ), Color( 1, 0, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BadGuy" type="Node2D" groups=[
"bad_guys",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )
wander_speed = 80

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="Torso" type="Position2D" parent="Body"]

[node name="Torso" type="Sprite" parent="Body/Torso"]
texture = ExtResource( 1 )

[node name="Torso3" type="Sprite" parent="Body/Torso"]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 15 )

[node name="Torso2" type="Sprite" parent="Body/Torso"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
z_index = 100
texture = ExtResource( 1 )

[node name="Head" type="Position2D" parent="Body/Torso"]
position = Vector2( 0, -10 )

[node name="LeftEye" type="Position2D" parent="Body/Torso/Head"]
position = Vector2( -1.80154, -1.55919 )

[node name="RightEye" type="Position2D" parent="Body/Torso/Head"]
position = Vector2( 1.25, -3.57628e-07 )

[node name="RightArm" type="Position2D" parent="Body/Torso"]
position = Vector2( 5.74056, 0.209625 )

[node name="LeftArm" type="Position2D" parent="Body/Torso"]
position = Vector2( -5.63559, -3.10798 )

[node name="ProgressBar" type="Node2D" parent="Body/Torso"]

[node name="ProgressBar" type="TextureProgress" parent="Body/Torso/ProgressBar"]
margin_left = -16.0
margin_top = -29.0
margin_right = 17.0
margin_bottom = -18.0
max_value = 3.0
step = 0.5
value = 3.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="Body"]
show_behind_parent = true
position = Vector2( 0, 5 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Celebrate = SubResource( 1 )
anims/Fists = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="SpringySprites" type="Node2D" parent="."]

[node name="Head" parent="SpringySprites" instance=ExtResource( 3 )]
position = Vector2( 0, -15 )
texture = ExtResource( 6 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="Head3" parent="SpringySprites" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -15 )
texture = ExtResource( 16 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="Head2" parent="SpringySprites" instance=ExtResource( 3 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, -15 )
z_index = 100
texture = ExtResource( 6 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head")

[node name="LeftEye" parent="SpringySprites" instance=ExtResource( 3 )]
position = Vector2( -1.80154, -16.5592 )
texture = ExtResource( 5 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="LeftEye3" parent="SpringySprites" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -1.80154, -16.5592 )
texture = ExtResource( 17 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="LeftEye2" parent="SpringySprites" instance=ExtResource( 3 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -1.80154, -16.5592 )
z_index = 100
texture = ExtResource( 5 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/LeftEye")

[node name="RightEye" parent="SpringySprites" instance=ExtResource( 3 )]
position = Vector2( 1.25, -15 )
texture = ExtResource( 5 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="RightEye3" parent="SpringySprites" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.25, -15 )
texture = ExtResource( 17 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="RightEye2" parent="SpringySprites" instance=ExtResource( 3 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 1.25, -15 )
z_index = 100
texture = ExtResource( 5 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../Body/Torso/Head/RightEye")

[node name="LeftArm" parent="SpringySprites" instance=ExtResource( 3 )]
position = Vector2( -5.63559, -8.10798 )
texture = ExtResource( 2 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="LeftArm3" parent="SpringySprites" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5.63559, -8.10798 )
texture = ExtResource( 14 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="LeftArm2" parent="SpringySprites" instance=ExtResource( 3 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -5.63559, -8.10798 )
z_index = 100
texture = ExtResource( 2 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/LeftArm")

[node name="RightArm" parent="SpringySprites" instance=ExtResource( 3 )]
position = Vector2( 5.74056, -4.79037 )
texture = ExtResource( 2 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="RightArm3" parent="SpringySprites" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 5.74056, -4.79037 )
texture = ExtResource( 14 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="RightArm2" parent="SpringySprites" instance=ExtResource( 3 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 5.74056, -4.79037 )
z_index = 100
texture = ExtResource( 2 )
stiffness = 4.2
damping = 0.6
target_node_path = NodePath("../../Body/Torso/RightArm")

[node name="Line2D" type="Line2D" parent="."]
visible = false
show_behind_parent = true
z_index = -1

[node name="Areas" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -5 )

[node name="Hurtbox" type="Area2D" parent="Areas"]
visible = false
collision_layer = 4
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hurtbox"]
position = Vector2( 0, -5 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="DetectTarget" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Areas/DetectTarget"]
polygon = PoolVector2Array( 0, -4, 164, -71, 164, 57, 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/DetectTarget"]
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hitbox"]
position = Vector2( 0, -5 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="MoveTo" type="Position2D" parent="."]

[node name="WanderWait" type="Timer" parent="."]
one_shot = true

[node name="WanderStuck" type="Timer" parent="."]

[node name="GetHealthy" type="AnimationPlayer" parent="."]
anims/Heal = SubResource( 7 )

[node name="CoughSneeze" type="Timer" parent="."]

[node name="Sounds" type="Node2D" parent="."]

[node name="Cough" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -10.0
attenuation = 5.65683

[node name="CoughCough" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -10.0
pitch_scale = 1.3
attenuation = 6.06285

[node name="Sneeze" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )
attenuation = 5.65685

[node name="Tween" type="Tween" parent="."]

[node name="WhiteFlash" type="Tween" parent="."]

[node name="ChaseDelay" type="Timer" parent="."]
one_shot = true

[node name="BossDefeated" type="Timer" parent="."]
one_shot = true
[connection signal="value_changed" from="Body/Torso/ProgressBar/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="area_entered" from="Areas/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Areas/Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="area_entered" from="Areas/DetectTarget" to="." method="_on_DetectTarget_area_entered"]
[connection signal="area_entered" from="Areas/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="WanderStuck" to="." method="_on_WanderStuck_timeout"]
[connection signal="animation_finished" from="GetHealthy" to="." method="_on_GetHealthy_animation_finished"]
[connection signal="timeout" from="CoughSneeze" to="." method="_on_CoughSneeze_timeout"]
[connection signal="timeout" from="ChaseDelay" to="." method="_on_ChaseDelay_timeout"]
[connection signal="timeout" from="BossDefeated" to="." method="_on_BossDefeated_timeout"]
